# vasya

./: .gitignore  CHANGELOG.md  LOGGING.md  README.md  index.html  package-lock.json  package.json  show-errors.sh  view-logs.sh
.claude/plans/: telegram-calls.md
.github/: ANDROID_BUILD.md
.github/workflows/: android-build-simple.yml  android-build.yml  release.yml
docs/changelog/: v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.7.1.md  v0.7.2.md
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  fix_auth.patch  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V1__initial_schema.sql
src-tauri/src/: config.rs  lib.rs  main.rs  message.rs
src-tauri/src/commands/: auth.rs  auth.rs.bak  calls.rs  chats.rs  flood_wait.rs  folders.rs  group_calls.rs  media.rs  messages.rs  mod.rs  peer_resolve.rs  search.rs  settings.rs  stt.rs  topics.rs  voip_sidecar.rs
src-tauri/stt-sidecar/: Cargo.toml
src-tauri/voip-sidecar/: Cargo.toml
src-tauri/voip-sidecar/src/: audio.rs  encryption.rs  main.rs  protocol.rs  transport.rs
src/components/: ErrorBoundary.tsx
src/hooks/: useMediaQueue.ts  useMergedMessages.ts  useNotifications.ts  useSystemTheme.ts  useTauriCommand.ts  useTauriEvent.ts
src/i18n/: index.ts
src/store/: accountsStore.ts  authStore.ts  callStore.ts  chatsStore.ts  connectionStore.ts  downloadStore.ts  folderStore.ts  groupCallStore.ts  hotkeysStore.ts  messagesStore.ts  muteStore.ts  selectionStore.ts  settingsStore.ts  sttStore.ts  themeStore.ts
src/types/: telegram.ts
(+74 files in other folders)
